Adding new pages of comic after testing and updated package.json for new port

--- a/src/pages/comics/issue_4.pug
+++ b/src/pages/comics/issue_4.pug
@@ -102,3 +102,19 @@ block append content
           a(href='/comics/page_111.html')
             img.ui.image.fluid(src='./art/comics/SD/Kamigen%20Page%20111-01.png')
             h3 Page 111
+        .column.four.wide
+          a(href='/comics/page_112.html')
+            img.ui.image.fluid(src='./art/comics/SD/Kamigen%20Page%20112-01.png')
+            h3 Page 112
+        .column.four.wide
+          a(href='/comics/page_113.html')
+            img.ui.image.fluid(src='./art/comics/SD/Kamigen%20Page%20113-01.png')
+            h3 Page 113
+        .column.four.wide
+          a(href='/comics/page_114.html')
+            img.ui.image.fluid(src='./art/comics/SD/Kamigen%20Page%20114-01.png')
+            h3 Page 114
+        .column.four.wide
+          a(href='/comics/page_115.html')
+            img.ui.image.fluid(src='./art/comics/SD/Kamigen%20Page%20115-01.png')
+            h3 Page 115
