Adding new comic pages

--- a/src/pages/comics/page_115.pug
+++ b/src/pages/comics/page_115.pug
@@ -6,5 +6,6 @@ block prepend title
 block prepend content
   - var image_url = '../art/comics/HD/Kamigen Page 115-01.png';
   - var previous_url = '/comics/page_114.html';
+  - var next_url = '/comics/page_116.html';
   - var issue = 'Issue 04';
   - var issue_url = '/comics/issue_4.html';
