--- a/src/pages/comics/issue_4.pug
+++ b/src/pages/comics/issue_4.pug
@@ -118,3 +118,29 @@ block append content
           a(href='/comics/page_115.html')
             img.ui.image.fluid(src='./art/comics/SD/Kamigen%20Page%20115-01.png')
             h3 Page 115
+        .column.four.wide
+          a(href='/comics/page_116.html')
+            img.ui.image.fluid(src='./art/comics/SD/Kamigen%20Page%20116-01.png')
+            h3 Page 116
+        .column.four.wide
+          a(href='/comics/page_117.html')
+            img.ui.image.fluid(src='./art/comics/SD/Kamigen%20Page%20117-01.png')
+            h3 Page 117
+        .column.four.wide
+          a(href='/comics/page_118.html')
+            img.ui.image.fluid(src='./art/comics/SD/Kamigen%20Page%20118-01.png')
+            h3 Page 118
+        .column.four.wide
+          a(href='/comics/page_119.html')
+            img.ui.image.fluid(src='./art/comics/SD/Kamigen%20Page%20119-01.png')
+            h3 Page 119
+        .column.four.wide
+          a(href='/comics/page_120.html')
+            img.ui.image.fluid(src='./art/comics/SD/Kamigen%20Page%20120-01.png')
+            h3 Page 120
+        .column.four.wide
+          a(href='/comics/issue_5_cover.html')
+            img.ui.image.fluid(src='./art/comics/SD/Kamigen Issue 05 Cover-01.png')
+            h3 Issue 05
+            p Coming soon!
+        
