Adding issue 5 cover page and homepage updates

--- a/src/pages/comics/page_120.pug
+++ b/src/pages/comics/page_120.pug
@@ -6,5 +6,6 @@ block prepend title
 block prepend content
   - var image_url = '../art/comics/HD/Kamigen Page 120-01.png';
   - var previous_url = '/comics/page_119.html';
+  - var next_url = '/comics/issue_5_cover.html';
   - var issue = 'Issue 04';
   - var issue_url = '/comics/issue_4.html';
