Adding blog update and new screenshots

--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -20,6 +20,13 @@ block append content
               .ui.two.column.grid.stackable
                 .row
                   .column
+                    a(href='/wiki/blog/20210827-late-august-production-update.html' title='Late August Production Update')
+                      h3 Late August Production Update
+                    small
+                      em 27 August 2021
+                    p It's been a while since we've posted so here's a quick rundown of what's been going on behind the scenes!
+                    p The Kamigen Comics and Game are in heavy production so apologies we've not had time to keep the website up to date.
+                  .column
                     a(href='/comics/issue_4.html' title='Go to Issue 04')
                       h3 Issue 4 is complete!
                     small
@@ -32,6 +39,7 @@ block append content
                       |  and get yourself some 
                       a(href='/shop.html') Kamigen merchandise
                       | .
+                .row
                   .column
                     a(href='/comics/issue_4.html' title='Go to Issue 04')
                       h3 Merry Christmas Kamigen Fans!
@@ -41,8 +49,7 @@ block append content
                       | This is 
                       a(href='/comics/issue_4.html') a 4 page release
                       |  to thank your, dear fans, for being patient.
-                    p Hope you are all enjoying the holiday season, see you next year!
-                .row      
+                    p Hope you are all enjoying the holiday season, see you next year!     
                   .column
                     a(href='/comics/issue_4.html' title='Go to Issue 04')
                       h3 What happened to Team Jim
@@ -51,6 +58,7 @@ block append content
                     p Anak, Jim and Nick crashed into the ocean and seemed to perish. Sumpoy certainly thinks they did.
                     p Find out what happened in the latest pages of 
                       a(href='/comics/issue_4.html') Issue 04.
+                .row
                   .column
                     a(href='/comics/issue_4.html' title='Go to Issue 04')
                       h3 The story continues in pages 104-107
@@ -59,7 +67,6 @@ block append content
                     p After a near 3 month wait, the next pages of Kamigen are out!
                     p Makaptan and Sumpoy are ready to take on Jim, Nick and Anak when they return from Shangri-lah in 
                       a(href='/comics/issue_4.html') Issue 04.
-                .row
                   .column
                     a(href='/comics/issue_4.html' title='Go to Issue 04')
                       h3 Over 100 pages of Kamigen are out!
@@ -68,6 +75,7 @@ block append content
                     p This is a pretty special extra large release at 5 pages which has pushed the series to 103 pages.
                     p What mysteries lie waiting in Shangri Lah waiting to be discovered? Find out in 
                       a(href='/comics/issue_4.html') Issue 04.
+                .row
                   .column
                     a(href='/comics/issue_4.html' title='Go to Issue 04')
                       h3 Issue 04 continues in pages 95-98
@@ -75,7 +83,6 @@ block append content
                       em 4 July 2020
                     p Jim and Nick are in serious trouble - Makaptan is sending their entire force of genetic monsters at them. Find out what happens next over in 
                       a(href='/comics/issue_4.html') Issue 04.
-                .row
                   .column
                     a(href='/comics/issue_4.html' title='Go to Issue 04')
                       h3 The first pages of Issue 04 are out!
@@ -83,6 +90,7 @@ block append content
                       em 20 June 2020
                     p The story is finally starting to come together, our characters have a number of different agendas and upcoming storylines. Check out 
                       a(href='/comics/issue_4.html') Issue 04 now!
+                .row
                   .column
                     a(href='/comics/issue_3.html' title='Go to Issue 03')
                       h3 Issue 03 is complete!
