--- a/src/templates/wiki.pug
+++ b/src/templates/wiki.pug
@@ -18,6 +18,7 @@ block append content
         a.item(href='/wiki/timeline.html') Timeline
       h3.ui.dividing.header.inverted Production
       .ui.fluid.menu.vertical.inverted
+        a.item(href='/wiki/blog.html') Blog
         a.item(href='/wiki/info_sheets.html') Character and story info sheets
         a.item(href='/wiki/concept_art.html') Concept art
         a.item(href='/wiki/production_notes.html') Production notes
