Adding issue 5 page placeholder

--- a/src/pages/comics.pug
+++ b/src/pages/comics.pug
@@ -68,3 +68,14 @@ block append content
             h4 Islands
             p Anak is on a quest to find out why he's the last of his kind - oh and he might as well save the human race along the way!
             a(href='/comics/issue_4.html') Begin Issue 04
+        .row
+          .column.four.wide
+            a(href='/comics/issue_5.html')
+              img.ui.image.fluid(src='./art/comics/SD/Kamigen Issue 05 Cover-01.png')
+              h3 Issue 05
+          .column.four.wide.left.aligned
+            a(href='/comics/issue_5.html')
+              h2 Issue 05
+            h4 Name TBA
+            p This is the end of phase 1 and the first comic to be entirely in color!
+            a(href='/comics/issue_5.html') Preview Issue 05
