Added new pages to Issue 5 page and created their html pages

--- a/src/pages/comics/issue_5_cover.pug
+++ b/src/pages/comics/issue_5_cover.pug
@@ -5,6 +5,7 @@ block prepend title
 
 block prepend content
   - var image_url = '../art/comics/HD/Kamigen Issue 05 Cover-01.png';
+  - var next_url = '/comics/page_121.html';
   - var previous_url = '/comics/page_120.html';
   - var issue = 'Issue 04';
   - var issue_url = '/comics/issue_4.html';
