--- a/src/pages/comics/issue_5.pug
+++ b/src/pages/comics/issue_5.pug
@@ -15,7 +15,25 @@ block append content
             | Issue 05
           .ui.divider.header
         .column.four.wide
+        .column.four.wide
           a(href='/comics/issue_5_cover.html')
             img.ui.image.fluid(src='./art/comics/SD/Kamigen Issue 05 Cover-01.png')
             h3 Issue 05
-            p New pages coming by September 1 2021!
+            p New pages coming by October 1 2021!
+        .column.four.wide
+          a(href='/comics/page_121.html')
+            img.ui.image.fluid(src='./art/comics/SD/Kamigen%20Page%20121.png')
+            h3 Page 121
+        .column.four.wide
+        .column.four.wide
+          a(href='/comics/page_122.html')
+            img.ui.image.fluid(src='./art/comics/SD/Kamigen%20Page%20122.png')
+            h3 Page 122
+        .column.four.wide
+          a(href='/comics/page_123.html')
+            img.ui.image.fluid(src='./art/comics/SD/Kamigen%20Page%20123.png')
+            h3 Page 123
+        .column.four.wide
+          a(href='/comics/page_124.html')
+            img.ui.image.fluid(src='./art/comics/SD/Kamigen%20Page%20124.png')
+            h3 Page 124
