--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -20,12 +20,31 @@ block append content
               .ui.two.column.grid.stackable
                 .row
                   .column
+                    a(href='/comics/issue_5.html')
+                      h3 Pages 121-124 are out!
+                    small
+                      em 29 August 2021
+                    p The time has come - four fully coloured pages have been produced and posted on the Issue 5 page.
+                    p We are hoping to have the next set out within 2 weeks and by October 1st at the latest.
+                    p Want to support Kamigen?
+                    ul
+                      li
+                        a(href='https://www.facebook.com/kamigenofficial') Like our Facebook page
+                        | , 
+                      li
+                        a(href='https://www.instagram.com/kamigen_comics/') Follow us on Instagram
+                      li
+                        |  Order some 
+                        a(href='/shop.html') Kamigen merchandise
+                        | .
+                  .column
                     a(href='/wiki/blog/20210827-late-august-production-update.html' title='Late August Production Update')
                       h3 Late August Production Update
                     small
                       em 27 August 2021
                     p It's been a while since we've posted so here's a quick rundown of what's been going on behind the scenes!
                     p The Kamigen Comics and Game are in heavy production so apologies we've not had time to keep the website up to date.
+                .row
                   .column
                     a(href='/comics/issue_4.html' title='Go to Issue 04')
                       h3 Issue 4 is complete!
@@ -39,7 +58,6 @@ block append content
                       |  and get yourself some 
                       a(href='/shop.html') Kamigen merchandise
                       | .
-                .row
                   .column
                     a(href='/comics/issue_4.html' title='Go to Issue 04')
                       h3 Merry Christmas Kamigen Fans!
@@ -50,6 +68,7 @@ block append content
                       a(href='/comics/issue_4.html') a 4 page release
                       |  to thank your, dear fans, for being patient.
                     p Hope you are all enjoying the holiday season, see you next year!     
+                .row
                   .column
                     a(href='/comics/issue_4.html' title='Go to Issue 04')
                       h3 What happened to Team Jim
@@ -58,7 +77,6 @@ block append content
                     p Anak, Jim and Nick crashed into the ocean and seemed to perish. Sumpoy certainly thinks they did.
                     p Find out what happened in the latest pages of 
                       a(href='/comics/issue_4.html') Issue 04.
-                .row
                   .column
                     a(href='/comics/issue_4.html' title='Go to Issue 04')
                       h3 The story continues in pages 104-107
@@ -67,6 +85,7 @@ block append content
                     p After a near 3 month wait, the next pages of Kamigen are out!
                     p Makaptan and Sumpoy are ready to take on Jim, Nick and Anak when they return from Shangri-lah in 
                       a(href='/comics/issue_4.html') Issue 04.
+                .row
                   .column
                     a(href='/comics/issue_4.html' title='Go to Issue 04')
                       h3 Over 100 pages of Kamigen are out!
@@ -75,7 +94,6 @@ block append content
                     p This is a pretty special extra large release at 5 pages which has pushed the series to 103 pages.
                     p What mysteries lie waiting in Shangri Lah waiting to be discovered? Find out in 
                       a(href='/comics/issue_4.html') Issue 04.
-                .row
                   .column
                     a(href='/comics/issue_4.html' title='Go to Issue 04')
                       h3 Issue 04 continues in pages 95-98
@@ -83,6 +101,7 @@ block append content
                       em 4 July 2020
                     p Jim and Nick are in serious trouble - Makaptan is sending their entire force of genetic monsters at them. Find out what happens next over in 
                       a(href='/comics/issue_4.html') Issue 04.
+                .row
                   .column
                     a(href='/comics/issue_4.html' title='Go to Issue 04')
                       h3 The first pages of Issue 04 are out!
@@ -90,7 +109,6 @@ block append content
                       em 20 June 2020
                     p The story is finally starting to come together, our characters have a number of different agendas and upcoming storylines. Check out 
                       a(href='/comics/issue_4.html') Issue 04 now!
-                .row
                   .column
                     a(href='/comics/issue_3.html' title='Go to Issue 03')
                       h3 Issue 03 is complete!
@@ -100,8 +118,8 @@ block append content
                       a(href='/comics/issue_3.html') Issue 03.
     .column.six.wide
       h3.ui.dividing.header.inverted Latest Pages
-      a(href='/comics/page_116.html' style='min-height: 250px; display: block; position: relative;')
-        img.ui.image.fluid(src='./art/comics/SD/Kamigen%20Page%20116-01.png' style='clip: rect(20px, 650px, 250px, 20px); opacity: 0.5; position: absolute; z-index: 2;')
+      a(href='/comics/issue_5.html' style='min-height: 250px; display: block; position: relative;')
+        img.ui.image.fluid(src='./art/comics/SD/Kamigen%20Page%20121.png' style='clip: rect(12px, 380px, 250px, 12px); opacity: 0.5; position: absolute; z-index: 2;')
       h3.ui.dividing.header.inverted About Kamigen
       p Kamigen is a tropical cyberpunk world with aircraft combat. 
         a(href='/game.html') Drop into the pilot seat and join the struggle
