--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -20,6 +20,13 @@ block append content
               .ui.two.column.grid.stackable
                 .row
                   .column
+                    a(href='/wiki/blog/20210930-reclaiming-the-lost-visayan-culture.html' title='Reclaiming the lost Visayan culture')
+                      h3 Reclaiming the lost Visayan culture
+                    small
+                      em 30 September 2021
+                    p The mythology of Visayan culture featured a diverse pantheon of unique indigenous deities, some of whom are featured as characters in the Kamigen comics.
+                    p This project is dedicated to our lost culture, hoping to make a positive contribution to the growing knowledge and awareness of indigenous issues in the Philippines.
+                  .column
                     a(href='/comics/issue_5.html')
                       h3 Pages 121-124 are out!
                     small
@@ -37,6 +44,7 @@ block append content
                         |  Order some 
                         a(href='/shop.html') Kamigen merchandise
                         | .
+                .row
                   .column
                     a(href='/wiki/blog/20210827-late-august-production-update.html' title='Late August Production Update')
                       h3 Late August Production Update
@@ -44,7 +52,6 @@ block append content
                       em 27 August 2021
                     p It's been a while since we've posted so here's a quick rundown of what's been going on behind the scenes!
                     p The Kamigen Comics and Game are in heavy production so apologies we've not had time to keep the website up to date.
-                .row
                   .column
                     a(href='/comics/issue_4.html' title='Go to Issue 04')
                       h3 Issue 4 is complete!
@@ -58,6 +65,7 @@ block append content
                       |  and get yourself some 
                       a(href='/shop.html') Kamigen merchandise
                       | .
+                .row
                   .column
                     a(href='/comics/issue_4.html' title='Go to Issue 04')
                       h3 Merry Christmas Kamigen Fans!
@@ -68,7 +76,6 @@ block append content
                       a(href='/comics/issue_4.html') a 4 page release
                       |  to thank your, dear fans, for being patient.
                     p Hope you are all enjoying the holiday season, see you next year!     
-                .row
                   .column
                     a(href='/comics/issue_4.html' title='Go to Issue 04')
                       h3 What happened to Team Jim
@@ -77,6 +84,7 @@ block append content
                     p Anak, Jim and Nick crashed into the ocean and seemed to perish. Sumpoy certainly thinks they did.
                     p Find out what happened in the latest pages of 
                       a(href='/comics/issue_4.html') Issue 04.
+                .row
                   .column
                     a(href='/comics/issue_4.html' title='Go to Issue 04')
                       h3 The story continues in pages 104-107
@@ -85,7 +93,6 @@ block append content
                     p After a near 3 month wait, the next pages of Kamigen are out!
                     p Makaptan and Sumpoy are ready to take on Jim, Nick and Anak when they return from Shangri-lah in 
                       a(href='/comics/issue_4.html') Issue 04.
-                .row
                   .column
                     a(href='/comics/issue_4.html' title='Go to Issue 04')
                       h3 Over 100 pages of Kamigen are out!
@@ -93,13 +100,6 @@ block append content
                       em 21 July 2020
                     p This is a pretty special extra large release at 5 pages which has pushed the series to 103 pages.
                     p What mysteries lie waiting in Shangri Lah waiting to be discovered? Find out in 
-                      a(href='/comics/issue_4.html') Issue 04.
-                  .column
-                    a(href='/comics/issue_4.html' title='Go to Issue 04')
-                      h3 Issue 04 continues in pages 95-98
-                    small
-                      em 4 July 2020
-                    p Jim and Nick are in serious trouble - Makaptan is sending their entire force of genetic monsters at them. Find out what happens next over in 
                       a(href='/comics/issue_4.html') Issue 04.
                 .row
                   .column
