Added new comics pages

--- a/src/pages/comics/issue_5.pug
+++ b/src/pages/comics/issue_5.pug
@@ -15,7 +15,6 @@ block append content
             | Issue 05
           .ui.divider.header
         .column.four.wide
-        .column.four.wide
           a(href='/comics/issue_5_cover.html')
             img.ui.image.fluid(src='./art/comics/SD/Kamigen Issue 05 Cover-01.png')
             h3 Issue 05
@@ -24,7 +23,6 @@ block append content
           a(href='/comics/page_121.html')
             img.ui.image.fluid(src='./art/comics/SD/Kamigen%20Page%20121.png')
             h3 Page 121
-        .column.four.wide
         .column.four.wide
           a(href='/comics/page_122.html')
             img.ui.image.fluid(src='./art/comics/SD/Kamigen%20Page%20122.png')
@@ -37,3 +35,19 @@ block append content
           a(href='/comics/page_124.html')
             img.ui.image.fluid(src='./art/comics/SD/Kamigen%20Page%20124.png')
             h3 Page 124
+        .column.four.wide
+          a(href='/comics/page_125.html')
+            img.ui.image.fluid(src='./art/comics/SD/Kamigen%20Page%20125.png')
+            h3 Page 125
+        .column.four.wide
+          a(href='/comics/page_126.html')
+            img.ui.image.fluid(src='./art/comics/SD/Kamigen%20Page%20126.png')
+            h3 Page 126
+        .column.four.wide
+          a(href='/comics/page_127.html')
+            img.ui.image.fluid(src='./art/comics/SD/Kamigen%20Page%20127.png')
+            h3 Page 127
+        .column.four.wide
+          a(href='/comics/page_128.html')
+            img.ui.image.fluid(src='./art/comics/SD/Kamigen%20Page%20128.png')
+            h3 Page 128
