--- a/src/pages/comics/page_124.pug
+++ b/src/pages/comics/page_124.pug
@@ -6,5 +6,6 @@ block prepend title
 block prepend content
   - var image_url = '../art/comics/HD/Kamigen Page 124.png';
   - var previous_url = '/comics/page_123.html';
+  - var next_url = '/comics/page_125.html';
   - var issue = 'Issue 05';
   - var issue_url = '/comics/issue_5.html';
