--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -20,12 +20,29 @@ block append content
               .ui.two.column.grid.stackable
                 .row
                   .column
+                    a(href='/comics/issue_5.html')
+                      h3 Pages 125-128 are out!
+                    small
+                      em 16 October 2021
+                    p The crisis in Mambajao 2 continues as Nick races against the clock.
+                    p
+                      a(href='comics/page_125.html') Read page 125
+                      |  or 
+                      a(href='comics.html') see all comics
+                    a(href="https://www.etsy.com/au/listing/1059796338/jims-sunglasses-snapback-hat" title="Jim's Sunglasses Snapback Hat")
+                        img.ui.image.small.right.floated(src='/assets/hat.jpg')
+                    p Love Kamigen? Check out the official 
+                      a(href="https://www.etsy.com/au/listing/1059796338/jims-sunglasses-snapback-hat" title="Jim's Sunglasses Snapback Hat") Kamigen Hat
+                      | , available only at 
+                      a(href="https://www.etsy.com/au/shop/bearclothingdesigns") Bear Clothing Designs.
+                  .column
                     a(href='/wiki/blog/20210930-reclaiming-the-lost-visayan-culture.html' title='Reclaiming the lost Visayan culture')
                       h3 Reclaiming the lost Visayan culture
                     small
                       em 30 September 2021
                     p The mythology of Visayan culture featured a diverse pantheon of unique indigenous deities, some of whom are featured as characters in the Kamigen comics.
                     p This project is dedicated to our lost culture, hoping to make a positive contribution to the growing knowledge and awareness of indigenous issues in the Philippines.
+                .row  
                   .column
                     a(href='/comics/issue_5.html')
                       h3 Pages 121-124 are out!
@@ -44,7 +61,6 @@ block append content
                         |  Order some 
                         a(href='/shop.html') Kamigen merchandise
                         | .
-                .row
                   .column
                     a(href='/wiki/blog/20210827-late-august-production-update.html' title='Late August Production Update')
                       h3 Late August Production Update
@@ -52,6 +68,7 @@ block append content
                       em 27 August 2021
                     p It's been a while since we've posted so here's a quick rundown of what's been going on behind the scenes!
                     p The Kamigen Comics and Game are in heavy production so apologies we've not had time to keep the website up to date.
+                .row
                   .column
                     a(href='/comics/issue_4.html' title='Go to Issue 04')
                       h3 Issue 4 is complete!
@@ -65,7 +82,6 @@ block append content
                       |  and get yourself some 
                       a(href='/shop.html') Kamigen merchandise
                       | .
-                .row
                   .column
                     a(href='/comics/issue_4.html' title='Go to Issue 04')
                       h3 Merry Christmas Kamigen Fans!
@@ -76,6 +92,7 @@ block append content
                       a(href='/comics/issue_4.html') a 4 page release
                       |  to thank your, dear fans, for being patient.
                     p Hope you are all enjoying the holiday season, see you next year!     
+                .row
                   .column
                     a(href='/comics/issue_4.html' title='Go to Issue 04')
                       h3 What happened to Team Jim
@@ -84,7 +101,6 @@ block append content
                     p Anak, Jim and Nick crashed into the ocean and seemed to perish. Sumpoy certainly thinks they did.
                     p Find out what happened in the latest pages of 
                       a(href='/comics/issue_4.html') Issue 04.
-                .row
                   .column
                     a(href='/comics/issue_4.html' title='Go to Issue 04')
                       h3 The story continues in pages 104-107
@@ -93,6 +109,7 @@ block append content
                     p After a near 3 month wait, the next pages of Kamigen are out!
                     p Makaptan and Sumpoy are ready to take on Jim, Nick and Anak when they return from Shangri-lah in 
                       a(href='/comics/issue_4.html') Issue 04.
+                .row
                   .column
                     a(href='/comics/issue_4.html' title='Go to Issue 04')
                       h3 Over 100 pages of Kamigen are out!
@@ -101,7 +118,6 @@ block append content
                     p This is a pretty special extra large release at 5 pages which has pushed the series to 103 pages.
                     p What mysteries lie waiting in Shangri Lah waiting to be discovered? Find out in 
                       a(href='/comics/issue_4.html') Issue 04.
-                .row
                   .column
                     a(href='/comics/issue_4.html' title='Go to Issue 04')
                       h3 The first pages of Issue 04 are out!
@@ -109,6 +125,7 @@ block append content
                       em 20 June 2020
                     p The story is finally starting to come together, our characters have a number of different agendas and upcoming storylines. Check out 
                       a(href='/comics/issue_4.html') Issue 04 now!
+                .row
                   .column
                     a(href='/comics/issue_3.html' title='Go to Issue 03')
                       h3 Issue 03 is complete!
@@ -119,7 +136,7 @@ block append content
     .column.six.wide
       h3.ui.dividing.header.inverted Latest Pages
       a(href='/comics/issue_5.html' style='min-height: 250px; display: block; position: relative;')
-        img.ui.image.fluid(src='./art/comics/SD/Kamigen%20Page%20121.png' style='clip: rect(12px, 380px, 250px, 12px); opacity: 0.5; position: absolute; z-index: 2;')
+        img.ui.image.fluid(src='./art/comics/SD/Kamigen%20Page%20125.png' style='clip: rect(12px, 380px, 250px, 12px); opacity: 0.5; position: absolute; z-index: 2;')
       h3.ui.dividing.header.inverted About Kamigen
       p Kamigen is a tropical cyberpunk world with aircraft combat. 
         a(href='/game.html') Drop into the pilot seat and join the struggle
