Adding screenshots back and updated issue 5 notice

--- a/src/pages/comics/issue_5.pug
+++ b/src/pages/comics/issue_5.pug
@@ -18,7 +18,7 @@ block append content
           a(href='/comics/issue_5_cover.html')
             img.ui.image.fluid(src='./art/comics/SD/Kamigen Issue 05 Cover-01.png')
             h3 Issue 05
-            p New pages coming by October 1 2021!
+            p New pages coming by December 1st 2021!
         .column.four.wide
           a(href='/comics/page_121.html')
             img.ui.image.fluid(src='./art/comics/SD/Kamigen%20Page%20121.png')
