Adding generated files and tweak to crossfade

--- a/new/src/index.pug
+++ b/new/src/index.pug
@@ -15,7 +15,7 @@ html
           a#logo(href='#')
             h1()
               img(id='english_logo' class="max-w-[250px] lg:max-w-sm mx-auto pt-14 lg:pt-20" src='assets/Kamigen Logo.svg')
-              img(id='badlit_logo' class="opacity-0 max-w-[250px] -mt-[160px] -mb-[60px] lg:-mb-[69px] lg:max-w-sm mx-auto pt-14 lg:pt-20" src='assets/Kamigen Logo - Badlit.svg')
+              img(id='badlit_logo' class="opacity-0 max-w-[250px] -mt-[120px] lg:-mt-[160px] -mb-[60px] lg:-mb-[69px] lg:max-w-sm mx-auto pt-14 lg:pt-20" src='assets/Kamigen Logo - Badlit.svg')
             div(class="max-w-[290px] lg:max-w-md mx-auto mt-6 border-b  border-black ") 
           div(class="text-center pt-10")
             p(:class="show_badlit ? 'hidden' : ''") A story about Visayans
