--- a/new/src/index.pug
+++ b/new/src/index.pug
@@ -2,7 +2,7 @@ doctype html
 html
   head
     title
-    base(href='/')
+    //- base(href='/')
     meta(name='viewport' content='width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0')
     link(rel='stylesheet' href='./main.css')
   body
