--- a/new/src/index.pug
+++ b/new/src/index.pug
@@ -24,7 +24,7 @@ html
       .container(class="flex relative mx-auto")
         .slide(class="absolute w-full z-50 text-center md:text-left")
           img(class="max-h-96 mx-auto md:ml-8 md:mr-0" src='assets/Kamigen Issue 01 Cover-01.png')
-          .slide-content(class="md:absolute md:left-[296px] md:w-[437px] lg:w-[606px] md:top-0 gradient-white md:h-96")
+          .slide-content(class="max-w-[296px] mx-auto md:max-w-none md:absolute md:left-[296px] md:w-[437px] lg:w-[686px] md:top-0 gradient-white md:h-96")
             .slide-content-inner(class="p-4 md:pl-8 md:pr-16 lg:py-16")
               h2(class="text-lg underline md:py-3") Issue #01
               h3(class="text-xl font-bold py-3 md:py-6") Welcome to the Island
