--- a/new/src/index.pug
+++ b/new/src/index.pug
@@ -33,11 +33,31 @@ html
                   p(class="md:text-lg") The first issue introduces Kamigen Island and explains a bit about the current state of the world.
             .keen-slider__slide
               img(class="max-h-96 mx-auto" src='assets/Kamigen Issue 02 Cover-01.png')
+              .slide-content(class="max-w-[296px] mx-auto md:max-w-none md:absolute md:left-[296px] md:w-[437px] lg:w-[822px] md:top-0 gradient-white md:h-96")
+                .slide-content-inner(class="p-4 md:pl-8 md:pr-16 lg:py-16")
+                  h2(class="text-lg underline md:py-3") Issue #02
+                  h3(class="text-xl font-bold py-3 md:py-6") Mysteries in Outer Space
+                  p(class="md:text-lg") Ryoko is part of a team tasked with saving the Earth from a second water comet and the human race from extinction!
             .keen-slider__slide
               img(class="max-h-96 mx-auto" src='assets/Kamigen Issue 03 Cover-01.png')
+              .slide-content(class="max-w-[296px] mx-auto md:max-w-none md:absolute md:left-[296px] md:w-[437px] lg:w-[822px] md:top-0 gradient-white md:h-96")
+                .slide-content-inner(class="p-4 md:pl-8 md:pr-16 lg:py-16")
+                  h2(class="text-lg underline md:py-3") Issue #03
+                  h3(class="text-xl font-bold py-3 md:py-6") Bulawan
+                  p(class="md:text-lg") A hundred million years ago, an advanced society prospered from advancements based on ancient relics from a long dead race.
             .keen-slider__slide
               img(class="max-h-96 mx-auto" src='assets/Kamigen Issue 04 Cover-01.png')
+              .slide-content(class="max-w-[296px] mx-auto md:max-w-none md:absolute md:left-[296px] md:w-[437px] lg:w-[822px] md:top-0 gradient-white md:h-96")
+                .slide-content-inner(class="p-4 md:pl-8 md:pr-16 lg:py-16")
+                  h2(class="text-lg underline md:py-3") Issue #04
+                  h3(class="text-xl font-bold py-3 md:py-6") Islands
+                  p(class="md:text-lg") Anak is on a quest to find out why he's the last of his kind - oh and he might as well save the human race along the way!
             .keen-slider__slide
               img(class="max-h-96 mx-auto" src='assets/Kamigen Issue 05 Cover-01.png')
+              .slide-content(class="max-w-[296px] mx-auto md:max-w-none md:absolute md:left-[296px] md:w-[437px] lg:w-[822px] md:top-0 gradient-white md:h-96")
+                .slide-content-inner(class="p-4 md:pl-8 md:pr-16 lg:py-16")
+                  h2(class="text-lg underline md:py-3") Issue #05
+                  h3(class="text-xl font-bold py-3 md:py-6") Name TBA
+                  p(class="md:text-lg") This is the end of phase 1 and the first comic to be entirely in color!
     script(src="./alpine.js")
     script(src='./main.js')
